--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@
   
   /* Style the links inside the navigation bar */
   .topnav a {
-    float: none;
+    float: left;
     color: #f2f2f2;
     text-align: center;
     text-decoration: none;
